--- a/i18n/zh/docusaurus-plugin-content-docs/current/quick-view/fetch/feature.mdx
+++ b/i18n/zh/docusaurus-plugin-content-docs/current/quick-view/fetch/feature.mdx
@@ -83,7 +83,8 @@ pubic class BookRepository {
                 name != null && !name.isEmpty(),
                 table.name().ilike(name)
             )
-            .select(table);
+            .select(table)
+            .execute();
     }
 }
 ```
